# FDU_AI_Fundamentals_Course

./: .gitignore  README.md  pyproject.toml
HW1/: Report.tex  denseNet.py  project.ipynb  project1.py  project1_dropout.py  project1_regularization.py  pyproject.toml  train.py  train_and_predict.py  实验报告.md
HW1/.ipynb_checkpoints/: project-checkpoint.ipynb
HW2/: HW2.tex  analyze_predictions.py  classifier.py  finetune.py  gen_plot.py  hyperparam_sweep.py  install.py  model.py  project2.ipynb  pyproject.toml  requirements.txt  run_adversarial_pipeline.py  utils.py
HW2/.ipynb_checkpoints/: project2-checkpoint.ipynb
HW2/emotion/: README.md
HW2/emotion/split/: test-00000-of-00001.parquet  train-00000-of-00001.parquet  validation-00000-of-00001.parquet
HW2/emotion/unsplit/: train-00000-of-00001.parquet
python&pytorch tutorial/: python_tutorial.ipynb  pytorch_tutorial.ipynb
