[project]
name = "fdu-ai-fundamentals-course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.3.0",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
