[project]
name = "fdu-ai-fundamentals-course-HW1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "pip>=25.3",
    "setuptools>=80.9.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "wheel>=0.45.1",
]

[tool.uv.sources]
torch = [
{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
