[project]
name = "hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "huggingface-hub>=0.36.0",
    "ipython>=9.8.0",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "pandas-stubs==2.3.3.251201",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers[torch]>=4.57.3",
    "umap-learn>=0.5.9.post2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
